--- a/app/src/main/res/layout/activity_stock_detail.xml
+++ b/app/src/main/res/layout/activity_stock_detail.xml
@@ -22,12 +22,11 @@
         android:id="@+id/tv_current_stock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/item_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:background="@drawable/percent_change_pill_green"
         android:paddingLeft="@dimen/content_padding"
         android:paddingRight="@dimen/content_padding"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintBottom_toBottomOf="@id/tv_symbol"
         app:layout_constraintLeft_toRightOf="@id/tv_symbol"
         app:layout_constraintTop_toTopOf="@id/tv_symbol"
         tools:text="153.5$\n+12(0.5%)" />
@@ -49,10 +48,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/item_horizontal_margin"
+        android:lines="2"
+        android:maxLines="2"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
         app:layout_constraintBaseline_toBaselineOf="@id/tv_highlight_label"
         app:layout_constraintLeft_toRightOf="@id/tv_highlight_label"
-        tools:text="153$" />
+        tools:text="$153\n15.03.2015" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lc_stock_history"
@@ -64,6 +65,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_highlight_label" />
+        app:layout_constraintTop_toBottomOf="@id/tv_highlight" />
 
 </android.support.constraint.ConstraintLayout>
