--- a/app/src/main/res/layout/activity_stock_detail.xml
+++ b/app/src/main/res/layout/activity_stock_detail.xml
@@ -11,10 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="AAPL" />
 
@@ -23,11 +24,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:background="@drawable/percent_change_pill_green"
+        android:paddingEnd="@dimen/item_horizontal_margin"
         android:paddingLeft="@dimen/content_padding"
         android:paddingRight="@dimen/content_padding"
+        android:paddingStart="@dimen/item_horizontal_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintLeft_toRightOf="@id/tv_symbol"
+        app:layout_constraintStart_toEndOf="@id/tv_symbol"
         app:layout_constraintTop_toTopOf="@id/tv_symbol"
         tools:text="153.5$\n+12(0.5%)" />
 
@@ -36,11 +41,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="@string/highlighted"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_current_stock" />
 
     <TextView
@@ -48,11 +54,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/item_horizontal_margin"
+        android:layout_marginStart="@dimen/item_horizontal_margin"
         android:lines="2"
         android:maxLines="2"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
         app:layout_constraintBaseline_toBaselineOf="@id/tv_highlight_label"
         app:layout_constraintLeft_toRightOf="@id/tv_highlight_label"
+        app:layout_constraintStart_toEndOf="@id/tv_highlight_label"
         tools:text="$153\n15.03.2015" />
 
     <com.github.mikephil.charting.charts.LineChart
@@ -60,11 +68,15 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_highlight" />
 
 </android.support.constraint.ConstraintLayout>
